Adds endpoint for testing push notifications
