# src/main/resources/openapi/botanicare-api.yaml
@@ -390,6 +390,21 @@ paths:
         '404':
           description: Device was not found
 
+  /devices/{deviceId}/message:
+    get:
+      operationId: triggerPushNotification
+      parameters:
+        - name: deviceId
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Message was sent to the device
+        '404':
+          description: Device was not found
+
 components:
   schemas:
 
